# RattlesnakeRidge

./: .dockerignore  .env  .env.template  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  docker-compose.yml  dockerfile  dockerfile.certbot  dockerfile.nginx  fake_client.py  game.py  init-letsencrypt.sh  links.md  local.py  main.py  nginx.conf  notes.md  pyproject.toml  requirements.txt  run_server.py  scenes.py  test_direct_streaming.py  test_scenes.py  test_streaming.py
.github/workflows/: client-deploy.yml  deploy.yml  server-deploy.yml
agents/: __init__.py  agent.py  conversation.py
client/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: API.ts  App.tsx  Command.ts  Command.tsx  RequestQueue.ts  index.css
client/src/components/: AsciiBanner.tsx  CrtScreen.tsx  Footer.tsx  InputField.tsx  MobileMenu.tsx  Navbar.tsx  ResponseHandler.tsx  (+5 more)
data/: billy.yaml  clara.yaml  flint.yaml  prompts.yaml  whistle.yaml
data/characters/: billy.yaml  clara.yaml  flint.yaml  player.yaml  whistle.yaml
server/: __init__.py  clue_randomizer.py  commands.py  game.py  response.py  routes.py  scenes.py  session.py
server/agents/: agent.py  conversation.py
server/app/: __init__.py  routes.py
server/data/: clue_bank.yaml  prompts.yaml  setting.yaml
server/scenes/: core.py  rattlesnake_ridge.py
server/terraform/: main.tf
server/tests/: test_commands.py
server_tests/: test_commands.py  test_routes.py
v2/: cmds.py  local.py
v2/server/: __init__.py  game.py  response.py  routes.py  scenes.py
(+5 files in other folders)
